--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,9 +68,9 @@
         android:id="@+id/spinnerTestType"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/textViewNote"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginTop="16dp" />
 
 
@@ -94,7 +94,9 @@
         android:layout_below="@+id/textViewRuns"
         android:ems="10"
         android:inputType="number"
-        android:text="1" />
+        android:text="1"
+        android:autofillHints="1"
+        tools:ignore="LabelFor" />
 
 
     <EditText
@@ -108,7 +110,9 @@
         android:layout_toRightOf="@+id/editTextRuns"
         android:ems="10"
         android:inputType="number"
-        android:text="100000" />
+        android:text="100000"
+        android:autofillHints="10"
+        tools:ignore="LabelFor" />
 
     <Button
         android:id="@+id/buttonRunTest"
